# OpenKJ

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux-testbuild.yml  macos-build.yml  windows-builds.yml
src/: Info.plist.in  audiofader.cpp  audiofader.h  audiorecorder.cpp  audiorecorder.h  databaseworker.cpp  databaseworker.h  dbupdater.cpp  directorymonitor.cpp  dlgaddsinger.cpp  dlgaddsong.cpp  dlgcdg.cpp  dlgeditsong.cpp  dlgregularimport.cpp  dlgrequests.cpp  dlgsettings.cpp  dlgsettings.h  dlgsettings.ui  dlgsongshop.cpp  dlgsongshoppurchase.cpp  dlgvideopreview.h  karaokefileinfo.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mediabackend.cpp  mediabackend.h  mzarchive.cpp  mzarchive.h  okjtypes.cpp  okjtypes.h  pre-commit  settings.cpp  settings.h  spotifyauthcontroller.cpp  spotifyauthcontroller.h  spotifyclient.cpp  spotifyclient.h  spotifytab.cpp  spotifytab.h  (+6 more)
src/models/: tablemodelbreaksongs.cpp  tablemodelhistorysingers.cpp  tablemodelhistorysongs.cpp  tablemodelkaraokesongs.cpp  tablemodelplaylistsongs.cpp  tablemodelqueuesongs.cpp  tablemodelqueuesongs.h  tablemodelrequests.cpp  tablemodelrotation.cpp  tablemodelrotation.h  tablemodelsongshopsongs.cpp  tableviewtooltipfilter.h
